--- a/Server/src/main/resources/templates/everyone/registration.html
+++ b/Server/src/main/resources/templates/everyone/registration.html
@@ -45,6 +45,7 @@
             </table>
             <div ></div>
 
+            <p><a href="/resendConfirmationEmail">Didn't receive the confirmation email?</a></p>
         </div>
     </div>
 </div>
