--- a/Server/src/main/resources/templates/everyone/resetPassword.html
+++ b/Server/src/main/resources/templates/everyone/resetPassword.html
@@ -10,16 +10,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form action="#" th:if="!${invalidToken} and !${successMessage}" th:action="@{/confirmation}" th:object="${confirmationForm}" method="post">
+            <form action="#" th:if="!${invalidToken} and !${successMessage}" th:action="@{/forgotCredentials/resetPassword}" th:object="${resetPasswordForm}" method="post">
                 <table>
                     <tr>
-                        <td>Benutzername:</td>
-                        <td><input type="text" th:field="*{username}" autofocus/></td>
-                        <td th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></td>
-                    </tr>
-                    <tr>
                         <td>Passwort:</td>
-                        <td><input type="password" th:field="*{password}" /></td>
+                        <td><input type="password" th:field="*{password}" autofocus/></td>
                         <td th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></td>
                     </tr>
                     <tr>
@@ -30,12 +25,11 @@
                     </tr>
                     <tr>
                         <td><button type="submit">Submit</button></td>
-                        <td><input type="hidden" name="token" th:value="${confirmationToken}" /></td>
+                        <td><input type="hidden" name="token" th:value="${resetToken}" /></td>
                     </tr>
                 </table>
             </form>
             <table>
-                <tr><p th:if="${nameTaken}" th:text="${nameTaken}"></p></tr>
 
                 <tr><p th:if="${invalidToken}" th:text="${invalidToken}"></p></tr>
 
