--- a/Server/src/main/resources/templates/user/settings/accountSettings.html
+++ b/Server/src/main/resources/templates/user/settings/accountSettings.html
@@ -13,43 +13,60 @@
 <form action="#" th:action="@{/user/settings/account}" th:method="put">
     <table>
         <tbody>
-            <tr>
-                <td><label> Vorname: </label></td>
-                <td><input type="text" name="vorname" autofocus/> </td>
-            </tr>
+        <tr>
+            <td><label> Email: </label></td>
+            <td><input type="text" name="email" autofocus/></td>
+        </tr>
 
-            <tr>
-                <td><label> Nachname:</label> </td>
-                <td><input type="text" name="nachname"/> </td>
-            </tr>
+        <tr>
+            <td><label> Vorname: </label></td>
+            <td><input type="text" name="vorname"/></td>
+        </tr>
 
-            <tr>
-                <td><label> Username: </label></td>
-                <td><input type="text" name="benutzername"/> </td>
-            </tr>
+        <tr>
+            <td><label> Nachname:</label></td>
+            <td><input type="text" name="nachname"/></td>
+        </tr>
 
-            <tr>
-                <td><label> Password: </label></td>
-                <td><input type="password" name="passwort"/> </td>
-            </tr>
+        <tr>
+            <td><label> Username: </label></td>
+            <td><input type="text" name="benutzername"/></td>
+        </tr>
 
-            <tr><td><input type="submit" value="Change data"/></td></tr>
+        <tr>
+            <td><label> Password: </label></td>
+            <td><input type="password" name="passwort"/></td>
+        </tr>
+
+        <tr>
+            <td><input type="submit" value="Change data"/></td>
+        </tr>
         </tbody>
     </table>
 </form>
 
-<div>
-    <td th:text="'vorname:' + ${userdata.get(1)}">...</td>
-</div>
-<div>
-    <td th:text="'nachname:' + ${userdata.get(2)}">...</td>
-</div>
-<div>
-    <td th:text="'benutzername:' + ${userdata.get(7)}">...</td>
-</div>
-<div>
-    <td th:text="'passwort:' + ${userdata.get(8)}">...</td>
-</div>
+
+<table>
+    <tr>
+        <td th:text="'Email:'">...</td>
+        <td th:text="${userdata.get(3)}">...</td>
+    </tr>
+
+    <tr>
+        <td th:text="'Vorname:'">...</td>
+        <td th:text="${userdata.get(1)}">...</td>
+    </tr>
+
+    <tr>
+        <td th:text="'Nachname:'">...</td>
+        <td th:text="${userdata.get(2)}">...</td>
+    </tr>
+
+    <tr>
+        <td th:text="'Benutzername:'">...</td>
+        <td th:text="${userdata.get(7)}">...</td>
+    </tr>
+</table>
 <form th:action="@{/user/settings/account}" th:method="DELETE"><input type="submit" value="DELETE ACCOUNT"/></form>
 </body>
 </html>
