added superadmin BesprechungVerwalten, changed editBesprechung isOwner check to isAuthorized

--- a/Server/src/main/resources/templates/superadmin/superadminHome.html
+++ b/Server/src/main/resources/templates/superadmin/superadminHome.html
@@ -10,6 +10,7 @@
 <p><a href="/user">User Home</a></p>
 <p><a href="/admin">Admin Home</a></p>
 <p><a href="/superadmin/userVerwalten">User verwalten</a></p>
+<p><a href="/superadmin/besprechungList">Besprechungen verwalten</a></p>
 <p><a href="/logout">Logout</a></p>
 </body>
 </html>
