--- a/Server/src/main/resources/templates/user/editBesprechung.html
+++ b/Server/src/main/resources/templates/user/editBesprechung.html
@@ -7,6 +7,8 @@
 <body>
 <h1>EDIT BESPRECHUNG</h1>
 <p><a href="/user">User Home</a></p>
+<p><a href="/user/termine">Termine</a></p>
+<p><a href="/superadmin/besprechungList">Besprechungen verwalten</a></p>
 <tbody>
 <table>
     <form action="#" th:object="${besprechungForm}" th:action="'/user/editBesprechung/' + ${bId}" th:method="put">
