fixed almost all bugs and finished program to an extend

--- a/Server/src/main/resources/templates/everyone/resetPassword.html
+++ b/Server/src/main/resources/templates/everyone/resetPassword.html
@@ -21,7 +21,7 @@
                         <td>Passwort wiederholen:</td>
                         <td><input type="password" th:field="*{repeatPassword}" /></td>
                         <td th:if="${#fields.hasErrors('repeatPassword')}" th:errors="*{repeatPassword}"></td>
-                        <td th:if="${#fields.hasErrors('repeatedPasswordIsCorrect')}" th:errors="*{repeatedPasswordIsCorrect}"></td>
+                        <!--<td th:if="${#fields.hasErrors('repeatedPasswordIsCorrect')}" th:errors="*{repeatedPasswordIsCorrect}"></td>-->
                     </tr>
                     <tr>
                         <td><button type="submit">Submit</button></td>
