--- a/Server/src/main/resources/templates/user/neueBesprechung.html
+++ b/Server/src/main/resources/templates/user/neueBesprechung.html
@@ -109,7 +109,7 @@
 
         <tr>
             <td>
-                <button th:type="submit" th:text="'Erstellen/Update'"></button>
+                <button th:type="submit" th:text="'Erstellen'"></button>
             </td>
         </tr>
     </form>
