--- a/Server/src/main/resources/templates/everyone/registration.html
+++ b/Server/src/main/resources/templates/everyone/registration.html
@@ -10,7 +10,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form action="#" th:if="!${success} and !${error}" th:action="@{/registration}" th:object="${registrationForm}" method="post">
+            <!--<form action="#" th:if="!${success} and !${error}" th:action="@{/registration}" th:object="${registrationForm}" method="post">-->
+            <form action="#" th:if="!${success}" th:action="@{/registration}" th:object="${registrationForm}" method="post">
                 <table>
                     <tr>
                         <td>Vorname:</td>
