--- a/Server/src/main/resources/templates/user/editBesprechung.html
+++ b/Server/src/main/resources/templates/user/editBesprechung.html
@@ -13,7 +13,7 @@
 <table>
     <form action="#" th:object="${besprechungForm}" th:action="'/user/editBesprechung/' + ${bId}" th:method="put">
 
-        <label th:if="${#fields.hasGlobalErrors()}" th:errors="*{global}"></label>
+        <label th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></label>
         <tr>
             <td th:text="Thema"></td>
             <td><input type="text" th:field="*{thema}"/></td>
@@ -95,6 +95,7 @@
             <td>
                 <ul>
                     <li th:if="${gegenstandList.isEmpty()}"><label>Keine Gegenstände verfügbar</label></li>
+
                     <li th:each="gegenstand: ${gegenstandList}">
                         <label th:text="${gegenstand.get(1)}"></label>
 
@@ -108,6 +109,7 @@
                 </ul>
             </td>
         </tr>
+        <tr><td th:if="${#fields.hasErrors('chosenItemsCount')}" th:errors="*{chosenItemsCount}"></td></tr>
         <tr>
             <td>
                 <button type="submit" th:text="Update" ></button>
